Pass nullptr for paintInvalidationState if it can't be used to map geometry.

If it can't be used for the current object, it can't be used for an ancestor.
Therefore, after it returning false for canMapToAncestor(), pass nullptr fur
further recursions up the layout tree.

Furthermore, using it for an ancestor is invalid because a
PaintInvalidationState object is bound to a single LayoutObject.

Also adds PaintInvalidationState early-outing to LayoutView.

BUG=594516

Review URL: https://codereview.chromium.org/1818963003

Cr-Commit-Position: refs/heads/master@{#382772}

Former-commit-id: 4e57e854bd3a3e47c4aa18ce934d838e4eed4030